Home or landing page complete and showing up ok

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -8,7 +8,7 @@
 
 
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
+    line-height: 2;
     font-weight: 400;
 
     --bs-nav-tabs-border-color:var(--lightBlue);
@@ -17,28 +17,51 @@
     --bs-nav-tabs-link-active-color:var(--ws);
     --bs-nav-tabs-link-active-border-color:var(--lightBlue);
     --bs-nav-tabs-link-active-bg:var(--lightBlue);
-   
+    color: var(--lightBlue);
     background-color:var(--darkBlue)
+    
 };
+
 
 body {
     background-color: var(--darkBlue);
+    color: var(--lightBlue)
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: var(--llBlue);
+    background-color: var(--darkBlue);
+    border-color: var(--ws);
 }
 
 ul {
     background-color: var(--llBlue);
 }
+
 .nav-item {
     background-color: var(--llBlue);
 }
 
-.nav-link :active {
+.active {
     background-color: var(--darkBlue);
-}
-.jdspecial {
-    color: var(--lightBlue);
 };
 
+h1 {
+    color: var(--lightBlue);
+    padding: 20px;
+}
+
+h4{
+    padding: 40px;
+}
 p {
-color: var(--lightBlue)
-};
+color: var(--lightBlue);
+padding: 10px;
+}
+
+img {
+    width: 300px;
+    height:500px;
+    padding-left: 0;
+    margin-left: 0;
+}
