--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -10,6 +10,9 @@
      font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
      line-height: 2;
      font-weight: 400;
+     display: flex;
+     flex-direction: column;
+     height: 100vh;
 
      --bs-nav-tabs-border-color: var(--lightBlue);
      --bs-nav-tabs-link-hover-border-color: var(--llBlue);
@@ -48,16 +51,15 @@
      background-color: var(--darkBlue);
  }
 
- ;
-
+ 
  h1 {
      color: var(--lightBlue);
      padding: 20px;
  }
 
  h2 {
-color: var(--lightBlue);
-padding: 40px;
+     color: var(--lightBlue);
+     padding: 40px;
  }
 
  h4 {
@@ -68,10 +70,14 @@ padding: 40px;
      color: var(--lightBlue);
      padding: 5px;
  }
-
+.portfolioImage{
+    width: 300px;
+    height: 500px;
+    padding-left: 0;
+    margin-left: 0;
+}
  img {
-     width: 300px;
-     height: 500px;
+     
      padding-left: 0;
      margin-left: 0;
  }
@@ -85,9 +91,9 @@ padding: 40px;
  }
 
  .building {
-    width: 300px;
-    height: 400px;
-    border-color: var(--oceanBlue);
-    border-style: solid;
-    border-width: 6px;
+     width: 300px;
+     height: 400px;
+     border-color: var(--oceanBlue);
+     border-style: solid;
+     border-width: 6px;
  }
